deploy/020-deployment.yaml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: plantmonitor
  labels:
    app.kubernetes.io/name: plantmonitor

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: plantmonitor
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plantmonitor
    spec:
      containers:
        - name: service
          image: docker.io/lulf/plantmonitor-jvm:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              port: 8080
              path: /q/health/live
          readinessProbe:
            httpGet:
              port: 8080
              path: /q/health/ready
