deploy/030-service.yaml
kind: Service
apiVersion: v1

metadata:
  name: plantmonitor
  labels:
    app.kubernetes.io/name: plantmonitor

spec:
  selector:
    app.kubernetes.io/name: plantmonitor
  ports:
    - port: 8080
      name: http
      targetPort: http
