deploy/040-route.yaml
apiVersion: route.openshift.io/v1
kind: Route

metadata:
  name: plantmonitor
  labels:
    app.kubernetes.io/name: plantmonitor

spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: plantmonitor
